# universal_manipulation_interface

./: .gitignore  conda_environment.yaml  eval_real.py  run_realsense_aruco_pipeline.py
diffusion_policy/common/: sampler.py
diffusion_policy/config/: train_diffusion_unet_timm_umi_workspace.yaml
diffusion_policy/config/task/: umi_r1.yaml  umi_teleop_image.yaml
diffusion_policy/dataset/: umi_r1_dataset.py  umi_teleop_image_dataset.py
diffusion_policy/real_world/: gstreamer_recorder.py  multi_camera.py  real_data_conversion.py  single_zed.py
example/: eval_r1_config.yaml  eval_robots_config.yaml  eval_sim2sim_config.yaml
realsense_aruco_ws/: README.md  spaceMouseControl.md
realsense_aruco_ws/src/pose_to_csv/: CMakeLists.txt  package.xml
realsense_aruco_ws/src/pose_to_csv/launch/: pose_to_csv.launch
realsense_aruco_ws/src/pose_to_csv/src/: pose_to_csv.cpp
realsense_aruco_ws/src/record_data/: CMakeLists.txt  ffmpeg_timecode.py  package.xml
realsense_aruco_ws/src/record_data/launch/: start_aruco.launch  start_realsense_and_aruco.launch  start_record.launch  start_two_realsense.launch  start_usb_camera_and_aruco.launch
realsense_aruco_ws/src/record_data/src/: video_and_traj_recorde.cpp  video_traj_recorder.cpp
realsense_aruco_ws/src/umi_control/: CMakeLists.txt  package.xml
realsense_aruco_ws/src/umi_control/src/: umi_control_from_moveit.cpp  umi_control_from_spacemouse.cpp  umi_control_sim.cpp
realsense_aruco_ws/src/umi_description/: CMakeLists.txt  package.xml
realsense_aruco_ws/src/umi_description/launch/: display.launch
realsense_aruco_ws/src/umi_description/meshes/: gripper_gopro.STL  hand.STL  left_finger.STL  left_finger.dae  right_finger.STL  right_finger.dae  umi_gripper.STL
realsense_aruco_ws/src/umi_description/rviz/: urdf.rviz
realsense_aruco_ws/src/umi_description/urdf/: umi.xacro  umi_with_aruco.xacro
realsense_aruco_ws/src/umi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
realsense_aruco_ws/src/umi_moveit_config/config/: cartesian_limits.yaml  fake_controllers.yaml  gazebo_umi.urdf  joint_limits.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  umi.srdf
realsense_aruco_ws/src/umi_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
scripts/: detect_aruco_d435.py  image_to_video.py  recording_posprocess.py  recording_processor.md  recording_processor.py  test_rosbridge.py
scripts_real/: control_robots.py  demo_eail_real_bimanual_robots.py  demo_real_robot_collect.py  demo_ros_bimanual_robots.py  replay_eail_real_bimanual_umi.py
scripts_realsense_aruco_pipeline/: 00_process_videos.py  01_detect_aruco.py  02_gripper_calibration.py  03_generate_trajectory.py  04_generate_dataset_plan.py
scripts_slam_pipeline/: 06_generate_dataset_plan.py
scripts_teleop_pipeline/: 00_process_videos.py  01_generate_dataset_plan.py  03_generate_replay_buffer.py  csv2zarr.py  dataset_vis.py  eval_real.py  eval_real_sim2real.py  run_teleop_pipeline.py
sim2sim_o3de_ws/: README.md
sim2sim_o3de_ws/src/battery_description/: package.xml
sim2sim_o3de_ws/src/battery_description/launch/: display.launch.py
sim2sim_o3de_ws/src/battery_description/meshes/: battery1.STL  battery2.STL  cabinet1.STL  cabinet2.STL  horiz_plate.STL  vertical_plate.STL  vertical_plate2.STL  关键尺寸信息.xlsx
sim2sim_o3de_ws/src/battery_description/urdf/: battery.xacro  umi.urdf
sim2sim_o3de_ws/src/realsense2_description/urdf/: _d435.urdf.xacro
sim2sim_o3de_ws/src/umi_control/: CMakeLists.txt  package.xml
sim2sim_o3de_ws/src/umi_control/include/umi_control/: tf2_helper.hpp
sim2sim_o3de_ws/src/umi_control/launch/: arm_eef_servo_controller.launch.py  arm_eef_servo_controller_test.launch.py  arm_moveit_controller.launch.py
sim2sim_o3de_ws/src/umi_control/src/: arm_controller.cpp  arm_eef_controller.cpp  arm_eef_controller_test.cpp  arm_joint_controller.cpp  arm_moveit_controller.cpp  eef_pose_gripper_width_pub.cpp  gripper_controller.cpp
sim2sim_o3de_ws/src/umi_description/: CMakeLists.txt  package.xml
sim2sim_o3de_ws/src/umi_description/config/: ur5e_joint_limits.yaml
sim2sim_o3de_ws/src/umi_description/launch/: display.launch.py
sim2sim_o3de_ws/src/umi_description/meshes/: left_finger.STL  left_finger.dae  right_finger.STL  right_finger.dae  table.dae
sim2sim_o3de_ws/src/umi_description/rviz/: urdf.rviz
sim2sim_o3de_ws/src/umi_description/urdf/: gripper.xacro  umi.xacro
sim2sim_o3de_ws/src/umi_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sim2sim_o3de_ws/src/zmq_bridge/: package.xml  setup.cfg  setup.py
tests/: dh_gripper_test.py  test_status_interpolator.py  test_uvc_camera.py
tool_ws/src/pose_publisher/: CMakeLists.txt  README.md  package.xml
umi/common/: cv_util.py  interpolation_util.py  status_interpolator.py  usb_util.py
umi/real_world/: bimanual_umi_rs_env.py  dh_controller.py  rs_dh_env.py  state_recorder.py
umi/shared_memory/: shared_memory_ring_buffer.py
umi/sim_world/: bimanual_r1_env.py  bimanual_r1_sim_env.py  bimanual_umi_sim_env.py  camera_receive_interface.py  eval_r1.py  eval_r1_sim.py  eval_real.py  eval_sim.py  eval_sim_robot.py  multi_camera.py  ros_control_interface.py  ros_receive_interface.py  ros_receive_test.py  sim_arm_controller.py  sim_gripper_controller.py  sim_vacuum_controller.py  single_camera.py  uvc_camera.py  zmq_receiver.py
umi/sim_world/ros2/: image_zmq_pub.py  ros_control_zmq_pub.py  ros_receive_zmq_pub.py
umi/sim_world/test/: camera_zmq.py  test_control_from_csv.py  test_control_from_spacemouse.py  test_image_pub.py  test_joint_pub.py  test_receive_interface.py  test_servo_cmd.py  test_tf_pub.py
(+27 files in other folders)
