<?xml version="1.0"?>
<package format="2">
  <name>umi_control</name>
  <version>0.0.0</version>
  <description>The umi_control package</description>

  <maintainer email="zhangheng203@huawei.com">leon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2</build_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>moveit_core</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <exec_depend>moveit_core</exec_depend>

  <build_depend>moveit_msgs</build_depend>
  <build_export_depend>moveit_msgs</build_export_depend>
  <exec_depend>moveit_msgs</exec_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>



  <export>

  </export>
</package>
